--- a/vacation-website.html
+++ b/vacation-website.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+
+    <title>Moon Vacation</title>
+  </head>
+  <body>
+    <div class="container">
+        
+      <div class="jumbotron moon">
+        <div class="frosted">
+            <h1>VACATION TO THE MOON</h1>
+            <p> 
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet nunc ultricies, congue mi eget, ultrices risus. Morbi vel commodo orci. Ut sed est a purus sagittis fringilla non et metus. Nullam vel aliquam quam. Aenean ac magna vitae leo scelerisque laoreet. Nam placerat quis nulla et ultrices. Donec et quam a metus varius vulputate. Nunc varius eleifend vulputate. Maecenas porttitor libero sit amet ornare semper. Curabitur vel augue aliquam, interdum enim sit amet, consectetur nibh.
+            </p>
+            <!-- <img src="images/moon.jpg"> -->
+        </div>
+      </div>
+<!--       
+      <div class="moonpic">
+        
+      </div> -->
+
+
+      <div class="container glass">
+        <h2>people say it's great</h2>
+        loren ipsupsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet nunc ultricies, congue mi eget, ultrices risus. Morbi vel commodo orci.psum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet nunc ultricies, congue mi eget, ultrices risus. Morbi vel commodo orci.psum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet nunc ultricies, congue mi eget, ultrices risus. Morbi vel commodo orci.psum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet nunc ultricies, congue mi eget, ultrices risus. Morbi vel commodo orci.psum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet nunc ultricies, congue mi eget, ultrices risus. Morbi vel commodo orci.
+      </div>
+
+      <blockquote class="blockquote text-center Thing">
+        <p>"I love the moon, it orbits the earth, andtechnically orbits the sun too, from a certain point of view"</p>
+        <footer class="blockquote-footer">Astronaut</footer>
+      </blockquote>
+    </div>
+  </body>
 </html>
