fixed gradient in background image
Co-Authored-by: Skylar Brockbank <skylar.brockbank@gmail.com>

--- a/vacation-website.html
+++ b/vacation-website.html
@@ -30,11 +30,11 @@
 
       <div class="container glass">
         <h2>people say it's great</h2>
-        loren ipsupsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet nunc ultricies, congue mi eget, ultrices risus. Morbi vel commodo orci.psum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet nunc ultricies, congue mi eget, ultrices risus. Morbi vel commodo orci.psum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet nunc ultricies, congue mi eget, ultrices risus. Morbi vel commodo orci.psum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet nunc ultricies, congue mi eget, ultrices risus. Morbi vel commodo orci.psum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet nunc ultricies, congue mi eget, ultrices risus. Morbi vel commodo orci.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet nunc ultricies, congue mi eget, ultrices risus. Morbi vel commodo orci. Ut sed est a purus sagittis fringilla non et metus. Nullam vel aliquam quam. Aenean ac magna vitae leo scelerisque laoreet. Nam placerat quis nulla et ultrices. Donec et quam a metus varius vulputate. Nunc varius eleifend vulputate. Maecenas porttitor libero sit amet ornare semper. Curabitur vel augue aliquam, interdum enim sit amet, consectetur nibh.
       </div>
 
       <blockquote class="blockquote text-center Thing">
-        <p>"I love the moon, it orbits the earth, andtechnically orbits the sun too, from a certain point of view"</p>
+        <p>"I love the moon, it orbits the earth, and technically orbits the sun too, from a certain point of view"</p>
         <footer class="blockquote-footer">Astronaut</footer>
       </blockquote>
     </div>
